--- a/style.css
+++ b/style.css
@@ -2,4 +2,95 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    outline: none;
+}
+
+body {
+    background-color: #8A51FC;
+}
+
+#logo {
+    width: 300px;
+    display: block;
+    margin: 20px auto 20px auto;
+}
+
+main {
+    width: 375px;
+    background-color: white;
+    border-radius: 20px;
+    margin: 0 auto 40px;
+    padding: 44px 24px 23px;
+}
+
+label {
+    color: #777;
+    font-weight: 400;
+    font-size: 14px;
+}
+
+select, input {
+    border-radius: 4px;
+    border: 1px solid #BBB;
+    background: #FFF;
+    height: 48px;
+    width: 100%;
+    margin-bottom: 24px;
+    appearance: none;
+    cursor: pointer;
+    padding-left: 18px;
+    font-weight: 700;
+    font-size: 16px;
+    color: #555;
+}
+
+button {
+    border-radius: 5px;
+    background: #772FD3;
+    height: 48px;
+    width: 100%;
+    border: none;
+    cursor: pointer;
+    color: white;
+    font-weight: 700;
+    font-size: 18px;
+    box-shadow: 0px 4px 8px rgba(0,0,0,0.3);
+}
+button:hover {
+    background: #5C23A6;
+}
+button:active {
+    box-shadow: none;
+}
+
+section {
+    border: 1px solid #772FD3;
+    border-radius: 20px;
+    margin-top: 36px;
+    padding: 12px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#arrow {
+    margin: 15px 0;
+}
+
+.currency-box{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 4px;
+}
+.currency {
+    color: #777;
+    font-weight: 400;
+    font-size: 14px;    
+}
+
+.currency-value {
+    color: #555;
+    font-weight: 700;
+    font-size: 20px;
 }
