--- a/style.css
+++ b/style.css
@@ -43,6 +43,12 @@ select, input {
     font-size: 16px;
     color: #555;
 }
+select:hover, input:hover {
+   opacity: 0.8;
+}
+select:active, input:active {
+    opacity: 0.6;
+}
 
 button {
     border-radius: 5px;
