--- a/style.css
+++ b/style.css
@@ -42,11 +42,13 @@ select, input {
     font-weight: 700;
     font-size: 16px;
     color: #555;
+    border-color: #772FD3;
+    border-radius: 10px
 }
-select:hover, input:hover {
+select:hover {
    opacity: 0.8;
 }
-select:active, input:active {
+select:active {
     opacity: 0.6;
 }
 
@@ -61,6 +63,7 @@ button {
     font-weight: 700;
     font-size: 18px;
     box-shadow: 0px 4px 8px rgba(0,0,0,0.3);
+    border-radius: 10px;
 }
 button:hover {
     background: #5C23A6;
