--- a/style.css
+++ b/style.css
@@ -43,7 +43,8 @@ select, input {
     font-size: 16px;
     color: #555;
     border-color: #772FD3;
-    border-radius: 10px
+    border-radius: 10px;
+    
 }
 select:hover {
    opacity: 0.8;
